ec2.tf
/* resource "aws_instance" "ec2-terraform" {
  ami = "ami-0557a15b87f6559cf"
  instance_type = "t2.medium" 
  tags = {
    Name = "ec2-instance"
  }
}   */
